# ComponentsForGloss

./: .gitignore  CHANGELOG.md  ComponentsForGloss.cabal  LICENSE
components/: AlmacenElementos.hs  DatosElementosPreconstruidos.hs  PruebasDibujos.hs  PruebasEntrada.hs
components/Tipos/: TipoBarraNavegacion.hs  TipoBase.hs  TipoElemento.hs  TipoEntrada.hs  TipoEtiqueta.hs  TipoForma.hs  TipoLista.hs  TipoParrafo.hs  TipoPosicion.hs  TipoSaltoDeLinea.hs  TipoTitulo.hs
components/Utilidades/: Colores.hs  Constantes.hs  Utiles.hs
